@@ -1,30 +1,34 @@
 package gg.xp.xivsupport.persistence.settings;
 
-import gg.xp.xivdata.data.Job;
+import gg.xp.xivdata.data.*;
 import gg.xp.xivsupport.events.state.XivState;
 import gg.xp.xivsupport.models.XivPlayerCharacter;
 import gg.xp.xivsupport.persistence.PersistenceProvider;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.EnumSet;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+/**
+ * Setting to hold an ordered list of jobs, typically used for job priority kind of stuff.
+ */
 public class JobSortSetting {
 
 	private static final Logger log = LoggerFactory.getLogger(JobSortSetting.class);
-	private final Set<Job> squelchWarningsForJobs = new HashSet<>();
+	private final Set<Job> squelchWarningsForJobs = EnumSet.noneOf(Job.class);
 	private final EnumListSetting<Job> sortSetting;
 	private final Set<Job> allValidJobs;
 	private final XivState state;
-	private List<Job> currentJailSort;
+	private List<Job> jobSort;
 
+	// TODO: custom default
 	public JobSortSetting(PersistenceProvider pers, String settingKey, XivState state) {
 		sortSetting = new EnumListSetting<>(Job.class, pers, settingKey, EnumListSetting.BadKeyBehavior.RETURN_DEFAULT, null);
 		// TODO: add "upgrades to job X" field to Job so that we can just combine
@@ -36,15 +40,15 @@ public class JobSortSetting {
 		if (listFromSettings != null) {
 			try {
 				validateJobSortOrder(listFromSettings);
-				currentJailSort = listFromSettings;
+				jobSort = listFromSettings;
 			}
 			catch (Throwable t) {
 				log.error("Saved jail order did not pass validation", t);
 			}
 		}
 		// Fall back to default
-		if (currentJailSort == null) {
-			currentJailSort = allValidJobs
+		if (jobSort == null) {
+			jobSort = allValidJobs
 					.stream()
 					.sorted(defaultJailSortComparator)
 					.toList();
@@ -73,10 +77,13 @@ public class JobSortSetting {
 		return 6;
 	}).thenComparing(Enum::ordinal);
 
-	public Comparator<XivPlayerCharacter> getPlayerJailSortComparator() {
+	/**
+	 * @return A comparator which can be used to sort a list of players according to their jobs
+	 */
+	public Comparator<XivPlayerCharacter> getComparator() {
 		return Comparator.<XivPlayerCharacter, Integer>comparing(player -> {
 			Job job = player.getJob();
-			int index = currentJailSort.indexOf(job);
+			int index = jobSort.indexOf(job);
 			if (index == -1) {
 				boolean firstWarning = squelchWarningsForJobs.add(job);
 				if (firstWarning) {
@@ -89,23 +96,56 @@ public class JobSortSetting {
 		}).thenComparing(XivPlayerCharacter::getName);
 	}
 
-	public Comparator<XivPlayerCharacter> getComparator() {
-		return getPlayerJailSortComparator();
+	/**
+	 * Deprecated, use {@link #getComparator()}
+	 *
+	 * @return A comparator which can be used to sort a list of players according to their jobs
+	 */
+	@Deprecated // use getComparator
+	public Comparator<XivPlayerCharacter> getPlayerJailSortComparator() {
+		return getComparator();
 	}
 
+	/**
+	 * @return The current job sort order
+	 */
 	public List<Job> getJobOrder() {
-		return Collections.unmodifiableList(currentJailSort);
+		return Collections.unmodifiableList(jobSort);
 	}
 
+	/**
+	 * Deprecated, use {@link #getJobOrder()}
+	 *
+	 * @return The current job sort order
+	 */
+	@Deprecated // use getJobOrder()
 	public List<Job> getCurrentJailSort() {
-		return Collections.unmodifiableList(currentJailSort);
+		return Collections.unmodifiableList(jobSort);
 	}
 
-	public void resetJailSort() {
-		this.currentJailSort = currentJailSort.stream()
+	/**
+	 * Reset the job order to the default
+	 */
+	public void resetJobOrder() {
+		this.jobSort = jobSort.stream()
 				.sorted(defaultJailSortComparator)
 				.toList();
 		sortSetting.delete();
+	}
+
+	/**
+	 * Deprecated, see {@link #resetJobOrder()}
+	 */
+	@Deprecated
+	public void resetJailSort() {
+		resetJobOrder();
+	}
+
+	/**
+	 * @return Whether or not this setting has actually been set by the user, or if it is using default values.
+	 */
+	public boolean isSet() {
+		return sortSetting.isSet();
 	}
 
 	public void validateJobSortOrder(List<Job> newSort) {
@@ -121,17 +161,58 @@ public class JobSortSetting {
 		}
 	}
 
-	public void setJailSort(List<Job> newSort) {
+
+	/**
+	 * Set a new job order
+	 *
+	 * @param newSort The new job order. MUST contain EVERY JOB. If you wish to only supply some jobs, see
+	 *                {@link #setJobOrderPartial(List)}
+	 */
+	public void setJobOrder(List<Job> newSort) {
 		validateJobSortOrder(newSort);
-		this.currentJailSort = List.copyOf(newSort);
+		this.jobSort = List.copyOf(newSort);
 		saveJailSort();
 	}
 
-	private void saveJailSort() {
-		this.sortSetting.set(currentJailSort);
+	/**
+	 * Deprecated, use {@link #setJobOrder(List)}
+	 *
+	 * @param newSort The new job order. MUST contain EVERY JOB. If you wish to only supply some jobs, see
+	 *                {@link #setJobOrderPartial(List)}
+	 */
+	@Deprecated
+	public void setJailSort(List<Job> newSort) {
+		setJobOrder(newSort);
 	}
 
+	/**
+	 * Like {@link #setJobOrder(List)}, but does not require you to have every single combat job in your list.
+	 * <p>
+	 * In the event that you do not specify all jobs, they will be appended to the end of the list in whatever order
+	 * they currently appear.
+	 *
+	 * @param partial The list of jobs. May be non-exhaustive.
+	 */
+	public void setJobOrderPartial(List<Job> partial) {
+		List<Job> newSort = new ArrayList<>(partial);
+		jobSort.forEach(j -> {
+			if (!newSort.contains(j)) {
+				newSort.add(j);
+			}
+		});
+		setJobOrder(newSort);
+	}
+	// TODO: add setSortPartial method
+	// TODO: rename methods so they aren't "Jail"
+
+	private void saveJailSort() {
+		this.sortSetting.set(jobSort);
+	}
+
+	/**
+	 * @return The current party list, sorted by this job priority.
+	 */
 	public List<XivPlayerCharacter> partyOrderPreview() {
-		return state.getPartyList().stream().sorted(getPlayerJailSortComparator()).collect(Collectors.toList());
+		return state.getPartyList().stream().sorted(getComparator()).toList();
 	}
 }
